--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": {
-    "node-fetch": "^2.6.7"
-  }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ]
 }
