--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
-    "axios": "^1.6.0"
+  "name": "danish-hemat",
+  "version": "1.0.0",
+  "engines": {
+    "node": "20.x"
   }
 }
